fix file upload text overflow

--- a/src/components/file-record.module.scss
+++ b/src/components/file-record.module.scss
@@ -10,28 +10,19 @@ $space: 8px;
   }
 }
 
-.fileRecordDetails {
-  flex: 1;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
 .fileName {
   display: inline-block;
   margin: 0 $space;
-  flex-shrink: 0;
-  flex-basis: 150px;
-  max-width: 300px;
+  max-width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
 .fileStatus {
+  display: block;
   margin: 0 $space;
-  flex: 1;
-  flex-basis: 200px;
+  line-height: 1;
 }
 
 .preview {
